--- a/DisableAutoprotectionMode.ipynb
+++ b/DisableAutoprotectionMode.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b5521f00-f0c4-4844-975f-a609951a2b6f",
    "metadata": {},
@@ -39,7 +38,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c8e91192-8600-4c0c-9745-a2d902b94415",
    "metadata": {},
@@ -77,11 +75,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d9cecada-ce7b-4482-8a44-c1710a97b6e4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "15 is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 9\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m5000\u001b[39m):\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;66;03m#if x is a prime number \u001b[39;00m\n\u001b[1;32m      6\u001b[0m     prime\u001b[38;5;241m.\u001b[39mappend(x)\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[43mprime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m15\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m (prime\u001b[38;5;241m.\u001b[39mindex(\u001b[38;5;241m37\u001b[39m))\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m (prime\u001b[38;5;241m.\u001b[39mindex(\u001b[38;5;241m60\u001b[39m))\n",
+      "\u001b[0;31mValueError\u001b[0m: 15 is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "prime = []\n",
+    "x = 2\n",
+    "\n",
+    "for i in range(5000):\n",
+    "    #if x is a prime number \n",
+    "    prime.append(x)\n",
+    "    \n",
+    "    \n",
+    "print (prime[15])\n",
+    "print (prime[37])\n",
+    "print (prime[60])\n",
+    "\n",
+    "    \n",
+    "#from these we can find the correct route in the folders to access the DisableCode.py file \n",
+    "#as each folder will have the corresponding prime number\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -155,18 +181,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b97fa471-0eff-4759-8547-1b1db1d9182e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 6, 12, 24, 48, 96, 192, 384, 768, 1536, 3072, 6144, 12288, 24576, 49152, 98304]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "b = 2\n",
+    "\n",
+    "fibo = []\n",
+    "\n",
+    "while b < 100000:\n",
+    "    fibo.append(a)\n",
+    "    b = a + b\n",
+    "    a = b\n",
+    "    \n",
+    "print (fibo[:24])\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "144c0748-3e9d-4c7b-b3a6-a5c8f3fb5a64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'totalpoints' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Leave unaltered\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m totalpoints \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m      3\u001b[0m currentpoints \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'totalpoints' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Leave unaltered\n",
     "totalpoints += 2\n",
@@ -188,12 +248,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c2e8d32-7deb-4948-a668-1e94a9b3d8b4",
+   "cell_type": "markdown",
+   "id": "2b5a28a4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "if i had the script which i have not found, i would fo to the correspodnding directiory using cd ProgNum2026-UnlockKapteyn/ where i would have previosuly copied itand then once i am there i would use python DisableCode.py to execute it and enter the password i have found in task 2"
+   ]
   },
   {
    "cell_type": "code",
@@ -208,7 +268,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "46aba5f2-3cf4-484d-922b-f253d0dc50d2",
    "metadata": {},
@@ -263,12 +322,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77a970df-00b9-4735-9238-04e91d271a96",
+   "cell_type": "markdown",
+   "id": "1b3db580",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "obviously i do not have the good code so when doing the script i recieve a Incorrect code for what i write"
+   ]
   },
   {
    "cell_type": "code",
@@ -319,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
