--- a/HumanVerification.ipynb
+++ b/HumanVerification.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3d8a639b-fe73-4e41-9e8c-56b3e7f47f49",
    "metadata": {},
@@ -53,17 +52,17 @@
     "\n",
     "**Please fill in your identify information:**\n",
     "\n",
-    "* Name: ..........\n",
-    "* Username: ..........\n",
-    "* Student number: ..........\n",
-    "* Group (AS1, etc.): ..........\n",
+    "* Name: L.B.J.SUBERBERE\n",
+    "* Username: lbjsuberbere\n",
+    "* Student number: s6080081\n",
+    "* Group (AS1, etc.): AS2\n",
     "\n",
     "-----"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fe271a48-3b05-485b-9cea-5d588a764325",
    "metadata": {},
    "outputs": [],
@@ -108,15 +107,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "368882bc-fcc0-4bac-8991-4baa1078a764",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Planet 9940 with temperature Sirius is G\n",
+      "Planet 5800 with temperature Sun is G\n",
+      "Planet 3042 with temperature Proxima Centauri is G\n",
+      "The star name isSun\n",
+      "The star is a type G\n"
+     ]
+    }
+   ],
+   "source": [
+    "stars = {\n",
+    "    \"Sirius\": 9940,\n",
+    "    \"Sun\": 5800,\n",
+    "    \"Proxima Centauri\": 3042\n",
+    "}\n",
+    "\n",
+    "for value in stars :\n",
+    "    if value == 9940 :\n",
+    "        print(f'Planet {stars[value]} with temperature {value} is O')\n",
+    "    elif value == 3042 : \n",
+    "        print(f'Planet {stars[value]} with temperature {value} is M')\n",
+    "    else:\n",
+    "        print(f'Planet {stars[value]} with temperature {value} is G')\n",
+    "\n",
+    "A = input('The star name is')\n",
+    "\n",
+    "if A == 'Sirius' :\n",
+    "    print('The star is a type O')\n",
+    "elif A == 'Sun':\n",
+    "    print('The star is a type G')\n",
+    "elif A == 'Proxima Centauri':\n",
+    "    print('The star is a type M')\n",
+    "else: \n",
+    "    print('The star is not in the dictionary')\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "00ed4f94-f27a-45f0-af45-05f05e5d87b5",
    "metadata": {},
    "outputs": [],
@@ -140,15 +176,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7379f3fe-27ab-4226-aa74-f42cae37e769",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The updated dictionary is {'Sirius': 9940, 'Sun': 5800, 'Proxima Centauri': 3042, 'Beta Centauri': 25000}\n",
+      "The spactral type of Beta Centauri is B\n"
+     ]
+    }
+   ],
+   "source": [
+    "#add the new star\n",
+    "stars['Beta Centauri'] = 25000\n",
+    "\n",
+    "print (f'The updated dictionary is {stars}')\n",
+    "print ('The spactral type of Beta Centauri is B')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6be35a70-43f0-40ab-91a8-e6287519aed7",
    "metadata": {},
    "outputs": [],
@@ -211,15 +262,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "4bae37f3-75ab-4af5-808e-18a56d7fd45d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2442329279.py, line 22)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[19], line 22\u001b[0;36m\u001b[0m\n\u001b[0;31m    for values\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.constants import pi, k\n",
+    "from math import *\n",
+    "radii = {\n",
+    "    \"Sirius\": 1.71,\n",
+    "    \"Sun\": 1,\n",
+    "    \"Proxima Centauri\": 0.154,\n",
+    "    \"Beta Centauri\": 8.4\n",
+    "}\n",
+    "\n",
+    "for values in radii :\n",
+    "    L = 4 * pi * k * value*value # i do not know how to take each inidividual temperatures\n",
+    "    D = sqrt(L)\n",
+    "    print (f'The habitable zone is {D} AU')\n",
+    "    \n",
+    "planets = {\n",
+    "    \"Sirius\": [4.1, 8.2, 5.0],\n",
+    "    \"Sun\": [0.39, 0.72, 1.0, 1.80],\n",
+    "    \"Proxima Centauri\": [0.05, 0.12],\n",
+    "    \"Beta Centauri\": [100.2, 153.5, 250.3, 280.5]\n",
+    "}\n",
+    "\n",
+    "# here i want ot create a loop that checks whether each value for each key in planets is greater of smaller than the habitable zone. If yes i would print the following\n",
+    "#print(f'Planet {name} at {distance} AU : Hibitable') or Not habitABLE IF IT IS NOT\n",
+    "    \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "689d7c61-b195-499e-97d6-9d6deab7f7ad",
    "metadata": {},
    "outputs": [],
@@ -240,10 +326,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "51b7efb2-86c2-4584-8dcd-5ee6836955db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of points: 7. Student score: 0.0.\n"
+     ]
+    }
+   ],
    "source": [
     "# Leave unaltered\n",
     "print(f\"Total number of points: {totalpoints}. Student score: {currentpoints}.\")"
@@ -274,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
